--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.1",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon --require @babel/register server.js",
     "debug": "node --trace-warnings %NODE_DEBUG_OPTION% server.js"
   },
   "dependencies": {
+    "@babel/core": "^7.13.13",
+    "@babel/register": "^7.13.8",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "humps": "^2.0.1",
+    "mysql2": "^2.1.0",
     "mz": "^2.7.0",
-    "mysql2": "^2.1.0"
+    "nodemon": "^2.0.7"
   }
 }
