--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "humps": "^2.0.1",
     "mysql2": "^2.1.0",
     "mz": "^2.7.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "rand-token": "^1.0.1"
   }
 }
