--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^2.1.0",
     "mz": "^2.7.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "rand-token": "^1.0.1"
   }
 }
