--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/register": "^7.13.8",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "camelcase-keys": "^6.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "humps": "^2.0.1",
@@ -18,6 +19,7 @@
     "mz": "^2.7.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "rand-token": "^1.0.1"
+    "rand-token": "^1.0.1",
+    "raw-body": "^2.4.1"
   }
 }
